fix versão do java para java 8